--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+*{
+    margin:0%;
+    padding: 0%;
+    font-family: 'Courier New', Courier, monospace;
+    
+}
+
+
 div{
     background-color: rgb(215, 217, 219);
     border-radius: 20px;
